# image-resizer-niki

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: index.md
docs/.vitepress/: config.ts
docs/.vitepress/components/: ImageResizeTool.vue
lib/: index.test.ts  index.ts
rust/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
rust/src/: lib.rs
