[package]
name = "image-resizer-niki-rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
image = "0.25"
web-sys = { version = "0.3", features = [
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "ImageData",
    "Window",
] }
js-sys = "0.3"